--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 50px;
   padding: 0;
 }
 
@@ -18,4 +18,8 @@ form {
 
 .btn-round {
   margin: 20px;
+}
+
+.homepage-img {
+  width: 100%;
 }
