--- a/src/index.css
+++ b/src/index.css
@@ -22,4 +22,35 @@ form {
 
 .homepage-img {
   width: 100%;
+  height: 20%;
+  filter: none;
+}
+
+.homepage-img:hover {
+  filter: grayscale(1.1);
+  animation: ease-in color 1.2s;
+}
+
+.homepage-text:hover {
+  text-decoration: underline;
+}
+
+.home-icon {
+  height: 30px;
+}
+
+.home-icon:hover {
+  transform: scale(1.3);
+  background-color: rgba(128, 0, 128, 0.5);
+}
+
+.navbar {
+  width: 100%;
+  height: 30%;
+  background-color: rgba(128, 0, 128, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+  padding: 10px;
 }
