--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,6 @@ form {
 
 .home-icon:hover {
   transform: scale(1.3);
-  background-color: rgba(128, 0, 128, 0.5);
 }
 
 .navbar {
@@ -52,5 +51,22 @@ form {
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
-  padding: 10px;
+  padding: 10px 0px 10px 0px;
 }
+
+.mapped-beers {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  text-align: center;
+  background-color: lightgray;
+  margin-bottom: 20px;
+  padding: 15px 0px 15px;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.6);
+  border-radius: 10px;
+  max-width: 100%;
+  line-height: 1;
+}
+
