--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,6 @@ form {
 
 .homepage-img:hover {
   filter: grayscale(1.1);
-  animation: ease-in color 1.2s;
 }
 
 .homepage-text:hover {
@@ -46,7 +45,7 @@ form {
 .navbar {
   width: 100%;
   height: 30%;
-  background-color: rgba(128, 0, 128, 0.6);
+  background-color: rgba(0, 96, 128, 0.6);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -62,7 +61,7 @@ form {
   flex-wrap: wrap;
   text-align: center;
   background-color: lightgray;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   padding: 15px 0px 15px;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.6);
   border-radius: 10px;
@@ -70,3 +69,28 @@ form {
   line-height: 1;
 }
 
+.beer-img:hover {
+  transform: scale(1.1);
+}
+
+.beer-img {
+  margin-bottom: 20px;
+}
+
+.beerDetails {
+  display: flex;
+  flex-direction: column;
+  line-height: 1;
+  text-align: justify;
+  justify-content: center;
+  align-items: flex-start;
+
+}
+
+.all-beers:hover {
+  text-decoration: underline;
+}
+
+.beer-name:hover {
+  background-color: rgba(0, 96, 128, 0.6);
+}
