--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 body {
   margin: 50px;
   padding: 0;
+  font-family: 'Kanit', sans-serif;
+  font-family: 'Lexend Deca', sans-serif;
+  font-family: 'Lilita One', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 a {
@@ -24,6 +28,7 @@ form {
   width: 100%;
   height: 20%;
   filter: none;
+  margin-bottom: 20px;
 }
 
 .homepage-img:hover {
@@ -83,7 +88,7 @@ form {
   line-height: 1;
   text-align: justify;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
 
 }
 
